--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
   "type": "module",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.8.2",
+    "@prisma/client": "^6.9.0",
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
-  },
-  "devDependencies": {
-    "prisma": "^6.8.2"
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.9.0"
   }
 }
